--- a/Paper/Conclusions.tex
+++ b/Paper/Conclusions.tex
@@ -4,9 +4,9 @@ In summary:
   \item Not every number base can be represented by a device with a certain base. For example, a base ten number can not be exactly represented in a conventional computer, it will always have an error inherent of the system..No todas las bases numéricas son representables con una máquina de base distinta. Por ejemplo, no se puede representar la base 10 con base 2.
   \item En una máquina de cálculo "a medida", como la que puede implementarse en ASICs o FPGAs existen limitaciones en el bus de datos y en la electrónica de cálculo. Si la electrónica de cálculo debe ser reducida se recomienda usar mapas que puedan ser calculados sólo con sumas y restas de la variable pseudoaleatoria.
   \item Los mapas que sólo tienen operaciones de shifteo en la base de la máquina de cálculo inevitablemente caerán a cero en tantas iteraciones como el largo de la mantisa de representación. Por ejemplo el tent en base 2.
-  \item La comparación entre BP y BPW permite detectar el comportamiento del sistema. Puede detectarse si el atractor cae a un punto fijo y diferenciar si el transitorio es corto o largo, respecto de la cantidad de itaraciones del mapa.
-  \item Como se menciona en el paper de referencia, el período del mapa iterado aumenta respecto del simple. También se nota una mejora marginal en la mezcla de la secuencia. La distribución de valores es buena en todos los casos.
-  \item Skkiping technique deteriorates period's length nevertheless, it substantially improves the mixing of the sequences.  el skipping empeora el período pero mejora sustancialmente la mezcla de los valores. Esto puede verse en BP, BPW y MP.
+  \item By comparing BP and BPW quantifiers it becomes easy to infer the system's behavior. They allow to see if the sequences tend to a fixed point and what is more, to discriminate whether it has a long or short transient.. La comparación entre BP y BPW permite detectar el comportamiento del sistema. Puede detectarse si el atractor (el atractor no, la secuencia generada) cae a un punto fijo y diferenciar si el transitorio es corto o largo, respecto de la cantidad de itaraciones del mapa.
+  \item With regard to the switching map, period's length of the itered map is lower than the original's one. However, the mixing and values characteristic are quite better.  Como se menciona en el paper de referencia, el período del mapa iterado aumenta (disminuye) respecto del simple. También se nota una mejora marginal en la mezcla de la secuencia. La distribución de valores es buena en todos los casos.
+  \item Skipping technique deteriorates period's length nevertheless, it substantially improves the mixing of the sequences. This fact is brought to light by BP, BPW and MP quantifiers. el skipping empeora el período pero mejora sustancialmente la mezcla de los valores. Esto puede verse en BP, BPW y MP.
 \end{itemize}
 
 produces a non-monotonous evolution toward the floating point result. This result is relevant because it shows that increasing the precision is not
