--- a/Paper/Introduction.tex
+++ b/Paper/Introduction.tex
@@ -8,7 +8,7 @@ All these adventages gave as result the emergence of High Performance Computing 
 The effect of finite precision in these new devices needs to be investigated.
 Floating point is not always available if speed, low power and/or small circuit area are in specifications.
 Often an fixed point solution is a better than floating point.
-This issue is critical if chaotic systems must be implemented, because due to roundoff errors digital implementations will always become periodic with a period $T$ and unstable orbits with a low period may become stable destroying completely the chaotic behavior.
+This issue is critical if chaotic systems must be implemented, because due to roundoff errors digital implementations will always become periodic with a period $T$ and unstable orbits with a low period may become stable destroying completely the chaotic behavior.  m
 
 Stochasticity and mixing are also relevant, to characterize these properties several quantifiers were studied \cite{DeMicco2009}.
 Among them the use of an entropy-complexity representation ($H-C$ plane) and causal-noncausal entropy ($H_{BP}-H_{Val}$ plane) deserves special consideration \cite{Rosso2007C,DeMicco2008,DeMicco2011,DeMicco2009,Rosso2009}[Poner Paper mío].
